--- a/mfi-big-project/pom.xml
+++ b/mfi-big-project/pom.xml
@@ -48,6 +48,14 @@
 		    <artifactId>quartz</artifactId>
 		    <version>2.2.1</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.eclipse.swt.org.eclipse.swt.win32.win32.x86_64.4.3.swt/org.eclipse.swt.win32.win32.x86_64 -->
+		<dependency>
+		    <groupId>org.eclipse.swt.org.eclipse.swt.win32.win32.x86_64.4.3.swt</groupId>
+		    <artifactId>org.eclipse.swt.win32.win32.x86_64</artifactId>
+		    <version>4.3</version>
+		</dependency>
+				
 		<!-- mfi end -->
 						
 	</dependencies>
